NEXT-19779 - Timezone Settings in user profile missing

--- a/src/Administration/Resources/app/administration/src/module/sw-profile/page/sw-profile-index/sw-profile-index.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-profile/page/sw-profile-index/sw-profile-index.html.twig
@@ -58,6 +58,7 @@
             <router-view
                 v-bind="{
                     user,
+                    timezoneOptions,
                     languages,
                     newPassword,
                     newPasswordConfirm,
