NEXT-19594 - Fix placement and styling of misc condition group

--- a/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-grouped-single-select/sw-grouped-single-select.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-grouped-single-select/sw-grouped-single-select.scss
@@ -15,5 +15,5 @@
 }
 
 .sw_grouped-single-select_group-misc-separator {
-    border-top: 2px solid $color-darkgray-200;
+    border-top: 2px solid $color-gray-300;
 }
