--- a/src/Administration/Resources/app/administration/src/app/component/utils/sw-skeleton/sw-skeleton.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/utils/sw-skeleton/sw-skeleton.html.twig
@@ -19,5 +19,9 @@
             </div>
         </div>
     </template>
+
+    <template v-else-if="variant === 'listing'">
+        <sw-skeleton-bar />
+    </template>
 </div>
 {% endblock %}
