--- a/src/Administration/Resources/app/administration/src/app/component/utils/sw-skeleton-bar/sw-skeleton-bar.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/utils/sw-skeleton-bar/sw-skeleton-bar.scss
@@ -2,7 +2,7 @@
 
 $sw-skeleton-bar-color: $color-gray-100;
 $sw-skeleton-bar-height: 42px;
-$sw-skeleton-shimmer-dark: $color-gray-300;
+$sw-skeleton-shimmer-dark: $color-gray-200;
 $sw-skeleton-shimmer-light: $color-gray-100;
 
 .sw-skeleton-bar {
@@ -18,7 +18,7 @@ $sw-skeleton-shimmer-light: $color-gray-100;
     &__shimmer {
         height: 100%;
         background-image: linear-gradient(89.17deg, $sw-skeleton-shimmer-light 0.8%, $sw-skeleton-shimmer-dark 50.09%, $sw-skeleton-shimmer-light 96.31%);
-        background-size: 315px $sw-skeleton-bar-height;
+        background-size: 100%;
         background-repeat: no-repeat;
         background-position: 0 0;
         animation: barShimmer 1800ms infinite;
