--- a/src/Administration/Resources/app/administration/src/module/sw-mail-template/component/sw-mail-header-footer-list/sw-mail-header-footer-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-mail-template/component/sw-mail-header-footer-list/sw-mail-header-footer-list.html.twig
@@ -7,7 +7,7 @@
     <template>
         {% block sw_mail_header_footer_list_grid_empty_state %}
         <sw-empty-state
-            v-if="!showListing"
+            v-if="!isLoading && !showListing"
             :title="$tc('sw-mail-header-footer.list.emptyStateTitle')"
             :subline="$tc('sw-mail-header-footer.list.emptyStateSubTitle')"
             :absolute="false"
@@ -29,7 +29,7 @@
     {% block sw_mail_template_list_grid %}
     <template #grid>
         <sw-entity-listing
-            v-if="showListing"
+            v-if="isLoading || showListing"
             id="mailHeaderFooterGrid"
             ref="listing"
             class="sw-mail-templates-list-grid"
