--- a/src/Administration/Resources/app/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
@@ -108,9 +108,8 @@
             </sw-empty-state>
             {% endblock %}
 
-            {% block sw_manufacturer_list_grid_loader %}
-            <sw-loader v-if="isLoading" />
-            {% endblock %}
+            {# @deprecated tag:v6.5.0 - Will be removed #}
+            {% block sw_manufacturer_list_grid_loader %}{% endblock %}
         </div>
         {% endblock %}
 
