--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/page/sw-settings-country-list/sw-settings-country-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/page/sw-settings-country-list/sw-settings-country-list.html.twig
@@ -68,9 +68,8 @@
     <sw-card-view slot="content">
         {% block sw_settings_country_list_content_card %}
         <sw-card
-            v-if="country"
+            v-if="isLoading || country"
             position-identifier="sw-settings-country-list"
-            :is-loading="isLoading"
         >
             {% block sw_settings_country_list_grid %}
             <template #grid>
