--- a/src/Administration/Resources/app/administration/src/module/sw-settings-customer-group/page/sw-settings-customer-group-list/sw-settings-customer-group-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-customer-group/page/sw-settings-customer-group-list/sw-settings-customer-group-list.html.twig
@@ -69,14 +69,13 @@
         <sw-card-view>
             {% block sw_settings_customer_group_list_card_content %}
             <sw-card
-                :is-loading="isLoading"
                 position-identifier="sw-settings-customer-group-list"
             >
 
                 {% block sw_settings_customer_group_list_grid %}
                 <template slot="grid">
                     <sw-entity-listing
-                        v-if="entitySearchable"
+                        v-if="isLoading || entitySearchable"
                         ref="listing"
                         class="sw-settings-customer-group-list-grid"
                         identifier="sw-settings-customer-group-list"
