--- a/src/Administration/Resources/app/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-list/sw-settings-number-range-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-list/sw-settings-number-range-list.html.twig
@@ -68,9 +68,8 @@
     <sw-card-view slot="content">
         {% block sw_settings_number_range_list_content_card %}
         <sw-card
-            v-if="numberRange"
+            v-if="isLoading || numberRange"
             position-identifier="sw-settings-number-range-list-content"
-            :is-loading="isLoading"
         >
             {% block sw_settings_number_range_list_grid %}
             <template #grid>
