--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.html.twig
@@ -69,7 +69,7 @@
         <div class="sw-settings-payment-list__content">
             {% block sw_settings_payment_list_grid %}
             <sw-entity-listing
-                v-if="payment && entitySearchable"
+                v-if="isLoading || (payment && entitySearchable)"
                 ref="swSettingsPaymentGrid"
                 class="sw-settings-payment-list-grid"
                 :items="payment"
