--- a/src/Administration/Resources/app/administration/src/app/component/utils/sw-skeleton/sw-skeleton.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/utils/sw-skeleton/sw-skeleton.scss
@@ -30,4 +30,43 @@ $sw-skeleton-background: $color-gray-50;
             height: 100%;
         }
     }
+
+    &__gallery {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 16px;
+
+        &::before {
+            content: "";
+            display: block;
+            padding-top: 100%;
+        }
+
+        .sw-skeleton-bar {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &__media {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        align-self: baseline;
+        justify-content: center;
+        padding: 16px;
+        margin-bottom: 0;
+
+        .sw-skeleton__media-preview {
+            width: 100%;
+            height: 150px;
+            margin-bottom: 18px;
+        }
+
+        .sw-skeleton__media-subtitle {
+            width: 75%;
+            height: 24px;
+        }
+    }
 }
