NEXT-19791 - Fix app action margin

--- a/src/Administration/Resources/app/administration/src/app/component/app/sw-app-actions/sw-app-actions.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/app/sw-app-actions/sw-app-actions.html.twig
@@ -1,5 +1,8 @@
 {% block sw_app_actions %}
-<div class="sw-app-actions">
+<div
+    class="sw-app-actions"
+    :class="{'sw-app-actions__empty': !areActionsAvailable}"
+>
     <template v-if="areActionsAvailable">
         <sw-context-button class="sw-app-actions__action-button">
             <template slot="button">
