--- a/src/Administration/Resources/app/administration/src/app/component/app/sw-app-actions/sw-app-actions.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/app/sw-app-actions/sw-app-actions.scss
@@ -3,6 +3,10 @@
 .sw-app-actions {
     margin-right: 8px;
 
+    &__empty {
+        margin: 0;
+    }
+
     .sw-app-actions__action-button .sw-button {
         padding: 11px;
 
