--- a/src/Administration/Resources/app/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.html.twig
@@ -69,6 +69,14 @@
 
     </sw-tree>
 
-    <sw-loader v-else />
+    <div v-else>
+        <sw-skeleton variant="tree-item" />
+        <sw-skeleton variant="tree-item-nested" />
+        <sw-skeleton variant="tree-item-nested" />
+        <sw-skeleton variant="tree-item-nested" />
+        <sw-skeleton variant="tree-item" />
+        <sw-skeleton variant="tree-item-nested" />
+        <sw-skeleton variant="tree-item-nested" />
+    </div>
 </div>
 {% endblock %}
