--- a/src/Administration/Resources/app/administration/src/module/sw-category/component/sw-landing-page-tree/sw-landing-page-tree.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-category/component/sw-landing-page-tree/sw-landing-page-tree.html.twig
@@ -114,6 +114,16 @@
     </sw-tree>
     {% endblock %}
 
+    <div v-else>
+        <sw-skeleton variant="tree-item" />
+        <sw-skeleton variant="tree-item" />
+        <sw-skeleton variant="tree-item" />
+        <sw-skeleton variant="tree-item" />
+        <sw-skeleton variant="tree-item" />
+        <sw-skeleton variant="tree-item" />
+        <sw-skeleton variant="tree-item" />
+    </div>
+
     {% block sw_landing_page_tree_action %}
     <div class="sw-landing-page-tree__add-button">
         <sw-button
