--- a/src/Administration/Resources/app/administration/src/module/sw-sales-channel/page/sw-sales-channel-list/sw-sales-channel-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-sales-channel/page/sw-sales-channel-list/sw-sales-channel-list.html.twig
@@ -64,16 +64,15 @@
                 v-if="entitySearchable"
                 slot="grid"
                 :is-loading="isLoading"
-                :identifier="feature.isActive('FEATURE_NEXT_17421') ? 'sw-sales-channel-list' : ''"
+                identifier="sw-sales-channel-list"
                 :columns="salesChannelColumns"
                 :repository="salesChannelRepository"
                 :items="salesChannels"
                 :full-page="false"
                 :show-selection="false"
                 :plain-appearance="true"
-                :show-settings="feature.isActive('FEATURE_NEXT_17421')"
-                :allow-column-edit="feature.isActive('FEATURE_NEXT_17421')"
-                @column-sort="sortColumns"
+                :show-settings="true"
+                :allow-column-edit="true"
             >
                 {% block sw_sales_channel_list_grid_column_name %}
                 <template #column-name="{ item }">
@@ -120,11 +119,20 @@
                 {% endblock %}
 
                 {% block sw_sales_channel_list_grid_column_created_at %}
-                <template
-                    v-if="feature.isActive('FEATURE_NEXT_17421')"
-                    #column-createdAt="{ item }"
-                >
+                <template #column-createdAt="{ item }">
                     {{ item.createdAt | date({ hour: '2-digit', minute: '2-digit' }) }}
+                </template>
+                {% endblock %}
+
+                {% block sw_sales_channel_list_grid_column_favorite %}
+                <template #column-id="{ item }">
+                    <sw-switch-field
+                        v-tooltip.right="{ message: $tc('sw-sales-channel.detail.favouriteLabel') }"
+                        class="favorite-switch"
+                        :disabled="!acl.can('user_config:create') || !acl.can('user_config:update')"
+                        :value="isFavorite(item.id)"
+                        @change="(isFavorite) => { salesChannelFavoritesService?.update(isFavorite, item.id) }"
+                    />
                 </template>
                 {% endblock %}
 
@@ -138,6 +146,16 @@
                         }"
                     >
                         {{ $tc('sw-sales-channel.list.contextMenuEdit') }}
+                    </sw-context-menu-item>
+                    {% endblock %}
+
+                    {% block sw_sales_channel_list_grid_actions_item_open_storefront %}
+                    <sw-context-menu-item
+                        v-if="isStorefrontSalesChannel(item)"
+                        :disabled="!item.active || !checkForDomainLink(item)"
+                        @click.prevent="openStorefrontLink(item.domainLink)"
+                    >
+                        {{ $tc('sw-sales-channel.general.tooltipOpenStorefront') }}
                     </sw-context-menu-item>
                     {% endblock %}
                 </template>
